fixed overlapping subheadline

--- a/docs/main.css
+++ b/docs/main.css
@@ -86,7 +86,7 @@ table {
     font-weight: bold;
   }
   .padded-multiline { 
-    line-height: 1.4; 
+    line-height: 1.9; 
     padding: 2px 0; 
 
   }
